compiler/fir/analysis-tests/testData/resolve/problems/compoundIncompleteWhen.kt
fun main(args: Array<String>) {
    val x = 42
    when (val x = 42; x) {is<!SYNTAX!><!>}
}